--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,31 +1,17 @@
 <div class="row">
-  <div class="col-md-3">
-    <span class="hipster img-fluid rounded"></span>
-  </div>
 
   <div class="col-md-9">
     <h1 class="display-4">Welcome in Task Manager App!</h1>
-
-    <p class="lead">This is your homepage</p>
-
     <div [ngSwitch]="isAuthenticated()">
-      <div class="alert alert-success" *ngSwitchCase="true">
-        <span id="home-logged-message" *ngIf="account">You are logged in as user "{{ account.login }}".</span>
-      </div>
+      <ul *ngSwitchCase="true">
 
-      <div class="alert alert-warning" *ngSwitchCase="false">
-        <span>If you want to </span>
-        <a class="alert-link" (click)="login()">sign in</a
-        ><span
-          >, you can try the default accounts:<br />- Administrator (login="admin" and password="admin") <br />- User (login="user" and
-          password="user").</span
-        >
-      </div>
+        <li><a (click)=teammates()>Teammates</a></li>
+        <!-- <li><a (click)=tasks()>List of Tasks</a></li>
+        <li><a (click)=board()>Board</a></li>
+        <li><a (click)=settings()>Settings</a></li>
+        <li><a (click)=charts()>Charts</a></li> -->
 
-      <div class="alert alert-warning" *ngSwitchCase="false">
-        <span>You don't have an account yet?</span>&nbsp;
-        <a class="alert-link" routerLink="account/register">Register a new account</a>
-      </div>
+    </ul>
     </div>
   </div>
 </div>
