--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -45,7 +45,7 @@
             <fa-icon icon="users" [fixedWidth]="true"></fa-icon>
             <span>Users List</span>
           </a>
-          <a class="dropdown-item" routerLink="/boards" routerLinkActive="active" (click)="collapseNavbar()">
+          <a class="dropdown-item" routerLink="/board" routerLinkActive="active" (click)="collapseNavbar()">
             <fa-icon icon="users" [fixedWidth]="true"></fa-icon>
             <span>Board</span>
           </a>
