more task changes

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -5,10 +5,10 @@
       <ul *ngSwitchCase="true">
          
         <li><a (click)=teammates()>Teammates</a></li>
-        <!-- <li><a (click)=tasks()>List of Tasks</a></li>
+        <li><a (click)=tasks()>List of Tasks</a></li>
         <li><a (click)=board()>Board</a></li>
-        <li><a (click)=settings()>Settings</a></li>
-        <li><a (click)=charts()>Charts</a></li> -->
+        <!-- <li><a (click)=settings()>Settings</a></li>
+        <li><a (click)=charts()>Charts</a></li>  -->
 
     </ul>
     </div>
