--- a/src/main/webapp/app/board/board.component.html
+++ b/src/main/webapp/app/board/board.component.html
@@ -6,7 +6,7 @@
             <div></div>
             <div></div>
             <button class="add-task-btn" (click)="addTask()">Add Task</button>
-            <button class="add-board-btn" (click)="addBoard()">Add Board</button>
+            <button class="add-board-btn" (click)="addColumn()">Add Column</button>
         </div>
 
         <div class="board-wrapper">
