Board Card RestControllers/ clear some data in front

--- a/src/main/webapp/app/board/board.component.html
+++ b/src/main/webapp/app/board/board.component.html
@@ -22,8 +22,9 @@
                          cdkDropList
                          [cdkDropListData]="column.tasks"
                          (cdkDropListDropped)="drop($event)">
-                        <div class="task" *ngFor="let item of column.tasks" cdkDrag>
-                            {{ item }}
+                        <div class="task" *ngFor="let task of column.tasks" cdkDrag>
+                            {{task}}
+
                         </div>
                     </div>
                 </div>
