--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -11,3 +11,9 @@
 
   <jhi-footer></jhi-footer>
 </div>
+
+<style>
+  bs-datepicker-container{
+    z-index: 2000 !important; /* has to be larger than 1050 */
+  }
+</style>
