--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,14 +1,15 @@
 <div class="row">
-  <div class="col-md-6">
-    <h1 class="display-3">Welcome in Task Manager App!</h1>
+  <div class="col-md-12">
+    <h1 class="display-4">Welcome in TaskManager!</h1>
     <div [ngSwitch]="isAuthenticated()">
+      <span id="home-logged-message" *ngIf="account">Hi,{{ account.firstName }} {{account.lastName}}</span> <br>
+      Application where you can manage tasks with your Team on Kanban Board.
+      References
       <ul *ngSwitchCase="true">
-         
-        <li><a (click)=teammates()>Teammates</a></li>
-        <li><a (click)=tasks()>List of Tasks</a></li>
-        <li><a (click)=board()>Board</a></li>
-        <!-- <li><a (click)=settings()>Settings</a></li>
-        <li><a (click)=charts()>Charts</a></li>  -->
+        <li><span>People arranged to your team</span>  <a style = "color:darkcyan;"(click)=teammates()>Teammates</a></li>
+        <li>list of Tasks that needs to be done! <a style = "color:darkcyan;" (click)=tasks()> Tasks</a></li>
+        <li><a style = "color:darkcyan;" (click)=board()> Kanban Board</a> to</li>
+        <li><a style = "color:darkcyan;" (click)=charts()>Charts</a></li> 
 
     </ul>
     </div>
