--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -8,10 +8,9 @@
       <ul *ngSwitchCase="true">
         <li><span>People arranged to your team</span>  <a style = "color:darkcyan;"(click)=teammates()>Teammates</a></li>
         <li>list of Tasks that needs to be done! <a style = "color:darkcyan;" (click)=tasks()> Tasks</a></li>
-        <li><a style = "color:darkcyan;" (click)=board()> Kanban Board</a> to</li>
+        <li><a style = "color:darkcyan;" (click)=board()> Kanban Board</a></li>
         <li><a style = "color:darkcyan;" (click)=charts()>Charts</a></li> 
-
-    </ul>
+      </ul>
     </div>
   </div>
 </div>
