--- a/src/main/webapp/app/board/board.component.html
+++ b/src/main/webapp/app/board/board.component.html
@@ -2,7 +2,7 @@
     <div class="board">
 
         <div class="board-bar">
-            <p class="board-name">{{ board.name }}</p>
+            <p class="board-name">Project  {{ board.name }}</p>
             <div></div>
             <div></div>
         </div>
