--- a/src/main/webapp/app/board/board.component.scss
+++ b/src/main/webapp/app/board/board.component.scss
@@ -23,19 +23,19 @@
     flex-grow: 1;
 
     // Override Automatic Minimum Size
-    // https://stackoverflow.com/questions/36247140/why-dont-flex-items-shrink-past-content-size
     min-width: 0;
     min-height: 0;
 
     .board-bar {
-        background: rgba(gray, 0.5);
-        padding: 8px 15px;
+        background: cadetblue;
+        padding: 0px 15px;
         display: flex;
         .board-name {
-            font-size: 20px;
+            align-self: center;
+            font-size: 30px;
             font-weight: bold;
-            color: white;
-            margin-right: 30px;
+            color: #55595C;
+            margin-bottom: 0%;
         }
         .add-task-btn{
             width: fit-content;
@@ -57,15 +57,16 @@
         .board-columns {
             display: flex;
             flex-grow: 1;
-
+            background: cadetblue;
+            min-height: 500px;
             .board-column {
                 display: flex;
                 flex-direction: column;
                 flex-grow: 1;
                 flex-basis: 0; // to force the columns to all be the same size, regardless of content
 
-                min-width: 300px;
-                margin: 50px;
+                min-width: 250px;
+                margin: 20px 40px;
                 padding: 25px;
 
                 border-radius: 4px;
@@ -92,6 +93,7 @@
 .tasks-container {
     flex-grow: 1;
     overflow-y: auto;
+    
 }
 
 .task {
