--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -15,6 +15,32 @@ h4 {
   font-weight: 300;
 }
 
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+::ng-deep jhi-main{
+  height: 100%;
+
+}
+.general{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .navbar{
+  }
+  .child{
+    height: inherit;
+
+  }
+  .footer{
+    
+  }
+}
+
 a:hover {
   /* make sure browsers use the pointer cursor for anchors, even with no href */
   cursor: pointer;
@@ -41,7 +67,6 @@ Generic styles
 /* other generic styles */
 
 .jh-card {
-  padding: 1.5%;
   margin-top: 20px;
   border: none;
 }
@@ -75,7 +100,11 @@ Generic styles
 
 .footer {
   border-top: 1px solid rgba(0, 0, 0, 0.125);
+  clear: both;
+  height:max-content;
+  min-height:60px;
 }
+
 
 .hand,
 [jhisortby] {
