small changes and mail service adjusted

--- a/src/main/webapp/app/entities/tasklist/tasklist.component.html
+++ b/src/main/webapp/app/entities/tasklist/tasklist.component.html
@@ -1,7 +1,11 @@
 <div>
+  <h4>List of All Tasks</h4>   
+    <span>You can create more tasks or update others on specific task information : </span>  <br>
+    <br>
 
-    
-  
+    <button matButton (click)="showTask(defaultTask)"> Create Task</button>
+    <br>
+    <br>
     <div class="table-responsive" *ngIf="tasks">
       <table class="table table-striped" >
         <thead>
