--- a/src/main/webapp/app/show-task/show-task.component.html
+++ b/src/main/webapp/app/show-task/show-task.component.html
@@ -1,5 +1,5 @@
 <div class="showtask" >
-    <div *ngIf="task" class="edit-form">
+    <div  class="edit-form">
       <h4>Task</h4>
       <form>
         <div class="form-group">
@@ -25,8 +25,8 @@
             name="description"
           />
         </div>
-  
-        <div class="form-group">
+
+        <!-- <div class="form-group">
           <label><strong>Status:</strong></label>
             <input
             class="checkbox"
@@ -39,7 +39,8 @@
             checked ="task.isCompleted ? 'checked' : ''"
           />
           <span>{{task.isCompleted ? 'Task Completed' : 'Task in Progress'}}</span>
-        </div>
+        </div> -->
+    
         <div class="form-group">
           <label><strong>Deadline date:</strong></label>
           <input
@@ -53,7 +54,7 @@
         </div>
       </form>
   
-      <div class="buttons">
+      <div *ngIf="task.id" class="editbuttons">
         <button mat-raised-button (click)="deleteTask()" color="warn">    
            <fa-icon icon="trash-alt"></fa-icon> Delete Task 
           </button>
@@ -69,12 +70,45 @@
           [hidden] ="!isEditClicked()"
         >
           Ok
-        </button></div>
+        </button>
+        <button mat-raised-button
+          type="submit"
+          (click)="assignToMe()"
+        >
+          Assign to me
+        </button>
+      </div>
       
+      <div *ngIf="!task.id" class="addingbuttons">
+        <button mat-raised-button (click)="goBackToBoard()" color="warn">    
+            go To Board
+          </button>
+ 
+        <button mat-raised-button
+          type="submit"
+          (click)="createTask()"
+          [hidden] ="!isEditClicked()"
+        >
+          Create New Task
+        </button>
+      </div>
+
+      <div class="form-group">
+        <label for="assignedTo">Assign To</label>
+        <select
+          type="select"
+          class="form-control"
+          id="assignedTo"
+          [(ngModel)] = "task.assignedTo"
+          [disabled] ="!isEditClicked()"
+          name="assignedTo"
+        >
+        <option *ngFor="let user of users" [ngValue] = "user.id" [selected]="user.id == task.assignedTo" >
+          {{ user.email }}
+        </option>
+      </select>
+      </div>
     </div>
   
-    <div *ngIf="!task">
-      <br />
-      <p>Cannot access this Task...</p>
-    </div>
+    
   </div>
