frontend clean up services models

--- a/src/main/resources/templates/mail/creationEmail.html
+++ b/src/main/resources/templates/mail/creationEmail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:lang="${#locale.language}" lang="en">
-  <head>
+<html  xmlns:th="http://www.thymeleaf.org" th:lang="${#locale.language}" lang="en">
+  <head style="background: lightblue;">
     <title th:text="#{email.activation.title}">JHipster creation</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="icon" th:href="@{|${baseUrl}favicon.ico|}" />
