--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="general">
-<jhi-page-ribbon></jhi-page-ribbon>
+<page-ribbon></page-ribbon>
 
 <div class="navbargeneral">
   <router-outlet name="navbar"></router-outlet>
@@ -10,6 +10,6 @@
     <router-outlet></router-outlet>
   </div>
 </div>
-<jhi-footer class="footer" [style.background-color]="getBackgroundColor()"></jhi-footer>
+<footer class="footer" [style.background-color]="getBackgroundColor()"></footer>
 
 </div>
