--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -10,7 +10,7 @@
         <strong>Settings saved!</strong>
       </div>
 
-      <jhi-alert-error></jhi-alert-error>
+      <alert-error></alert-error>
 
       <form name="form" role="form" (ngSubmit)="save()" [formGroup]="settingsForm" *ngIf="account" novalidate>
         <div class="form-group">
