--- a/src/main/webapp/app/admin/user-management/delete/user-management-delete-dialog.component.html
+++ b/src/main/webapp/app/admin/user-management/delete/user-management-delete-dialog.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="modal-body">
-    <jhi-alert-error></jhi-alert-error>
+    <alert-error></alert-error>
 
     <p>Are you sure you want to delete this User?</p>
   </div>
