--- a/src/main/webapp/app/admin/user-management/update/user-management-update.component.html
+++ b/src/main/webapp/app/admin/user-management/update/user-management-update.component.html
@@ -4,7 +4,7 @@
       <h2 id="myUserLabel">Create or edit a User</h2>
 
       <div *ngIf="user">
-        <jhi-alert-error></jhi-alert-error>
+        <alert-error></alert-error>
 
         <div class="form-group" [hidden]="!user.id">
           <label>ID</label>
