--- a/src/main/webapp/app/board/board.component.html
+++ b/src/main/webapp/app/board/board.component.html
@@ -2,9 +2,9 @@
     <div class="board">
 
         <div class="board-bar">
-            <p class="board-name">Project  {{ board.name }}</p>
-            <div></div>
-            <div></div>
+            <span class="board-name">Project  {{ board.name }}</span>
+        
+            <button class="btn btn-primary" style ="float: right; margin-right: 10%;" (click)="createTask()">Create Task</button>
         </div>
         <div class="board-wrapper">
             <div class="board-columns" cdkDropListGroup>
