--- a/src/main/webapp/app/board/board.component.scss
+++ b/src/main/webapp/app/board/board.component.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    background: cadetblue;
+
 }
 
 .app-name {
@@ -21,7 +23,10 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: 20px;
+    
     // Override Automatic Minimum Size
     min-width: 0;
     min-height: 0;
@@ -29,8 +34,9 @@
     .board-bar {
         background: cadetblue;
         padding: 0px 15px;
-        display: flex;
+        display: block;
         .board-name {
+            margin-left: 10%;
             align-self: center;
             font-size: 30px;
             font-weight: bold;
@@ -38,17 +44,14 @@
             margin-bottom: 0%;
         }
         .add-task-btn{
-            width: fit-content;
-            height: fit-content;
             
             margin-right: 30px;
         }
-        .add-board-btn{
-            width: fit-content;
-            height: fit-content;
-        }
+ 
     }
-
+    .board-button{
+        margin: 20px;
+    }
     .board-wrapper {
         display: flex;
         flex-grow: 1;
