--- a/src/main/webapp/app/entities/teamlist/teamlist.component.html
+++ b/src/main/webapp/app/entities/teamlist/teamlist.component.html
@@ -1,16 +1,16 @@
 <div class="root">
 
-  <jhi-alert-error></jhi-alert-error>
+  <alert-error></alert-error>
 
-  <jhi-alert></jhi-alert>
+  <alert></alert>
 
   <div class="table-responsive" *ngIf="users">
     <table class="table table-striped" >
       <thead>
-        <tr jhiSort  [(predicate)]="predicate" [(ascending)]="ascending" [callback]="transition.bind(this)">
-          <th scope="col" jhiSortBy="id" ><span>ID</span> <fa-icon icon="sort"></fa-icon></th>
-          <th scope="col" jhiSortBy="login"><span>Login</span> <fa-icon icon="sort"></fa-icon></th>
-          <th scope="col" jhiSortBy="email"><span>Email</span> <fa-icon icon="sort"></fa-icon></th>
+        <tr Sort  [(predicate)]="predicate" [(ascending)]="ascending" [callback]="transition.bind(this)">
+          <th scope="col" SortBy="id" ><span>ID</span> <fa-icon icon="sort"></fa-icon></th>
+          <th scope="col" SortBy="login"><span>Login</span> <fa-icon icon="sort"></fa-icon></th>
+          <th scope="col" SortBy="email"><span>Email</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -28,7 +28,7 @@
 
   <div *ngIf="users">
     <div class="row justify-content-center">
-      <jhi-item-count [params]="{ page: page, totalItems: totalItems, itemsPerPage: itemsPerPage }"></jhi-item-count>
+      <item-count [params]="{ page: page, totalItems: totalItems, itemsPerPage: itemsPerPage }"></item-count>
     </div>
 
     <div class="row justify-content-center">
