--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,36 +1,33 @@
-<div class="row">
-  <div class="col-md-12">
-    <h1 class="display-4">Welcome in TaskManager!</h1>
-    <div [ngSwitch]="isAuthenticated()">
-      <div *ngSwitchCase="true" ><span id="home-logged-message" *ngIf="account">Hi,{{ account.firstName }} {{account.lastName}}</span> <br>
-      Application where you can manage tasks with your Team on Kanban Board.
-      References
-        <ul>
-          <li><span>People arranged to your team</span>  <a style = "color:darkcyan;"(click)=teammates()>Teammates</a></li>
-          <li>list of Tasks that needs to be done! <a style = "color:darkcyan;" (click)=tasks()> Tasks</a></li>
-          <li><a style = "color:darkcyan;" (click)=board()> Kanban Board</a></li>
-          <li><a style = "color:darkcyan;" (click)=charts()>Charts</a></li> 
-        </ul>
+<div  style="align-self: center;">
+    <h1 class="flex-chlid-header ">Welcome in Task Manager!</h1>
+    <div  [ngSwitch]="isAuthenticated()">
+      <div class="row" *ngSwitchCase="true" >
+        <span class="flex-chlid-subheader" id="home-logged-message" *ngIf="account">Hi,{{ account.firstName }} {{account.lastName}}
+          <br>
+          <br>
+         Application where you can manage tasks with your Team on Kanban Board.
+          References</span>
+            <button class="flex-chlid btn btn-primary" (click)=teammates()> People arranged to your team. </button> 
+            <button class="flex-chlid btn btn-primary" (click)=tasks()> List of Tasks that needs to be done!</button>
+            <button class="flex-chlid btn btn-primary " (click)=board()> Kanban Board </button>
+            <button class="flex-chlid btn btn-primary" (click)=charts()> Charts</button>
+
       </div>
-      <div *ngSwitchCase = "false">
-      <span>Application where you can manage tasks with your Team on Kanban Board.</span> 
-      <span>What you can do with your team here?</span>
-      <ul>
-        <li><span>Create authorized accounts for every teammate with 2 possible roles: user or admin/manager</span></li>
-        <li><span>Manage your project by adding Tasks on visualised Kanban board which would be configured by your manager</span></li>
-        <li><span>Add needed tasks to project to report progress </span></li>
-        <li><span>Look up for project progress on charts created by archived data</span></li>
-      </ul>
+      <div class="row" *ngSwitchCase = "false">
+        <span class="flex-chlid-subheader">Application where you can manage tasks with your team on Kanban Board. 
+        <br>
+        <br>
+        What you can do with your team here? </span> 
+        <span class="flex-chlid-unautorized" >Create authorized accounts for every teammate with 2 possible roles: user or admin/manager</span>
+        <span class="flex-chlid-unautorized" >Manage your project by adding Tasks on visualised Kanban board which would be configured by your manager</span>
+        <span class="flex-chlid-unautorized" >Add needed tasks to project to report progress </span>
+        <span class="flex-chlid-unautorized" >Look up for project progress on charts created by archived data</span>
         <div class="mt-3 alert alert-warning">
-          <a class="alert-link" routerLink="/login">Sign in</a
-          ><span
-            >, or you can create Account </span
-          >
+          <a class="alert-link" routerLink="/login">Sign in</a><span>, or you can create Account </span>
           <a class="alert-link" routerLink="/account/register">Here</a>
 
         </div>
       </div>
     </div>
-    
-  </div>
+  
 </div>
