--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -8,15 +8,19 @@ Bootstrap tweaks
 ===============================================================*/
 
 body,
-h1,
+
 h2,
 h3,
 h4 {
   font-weight: 300;
 }
+h1{
 
+  font-weight: 600;
+  font-size: 3rem;}
 html,
 body {
+  font-family: 'Roboto Mono', monospace;
   height: 100%;
   width: 100%;
   margin: 0;
@@ -49,6 +53,9 @@ a:hover {
 .dropdown-item:hover {
   color: $dropdown-link-hover-color;
 }
+.row{
+  margin-top: 20px;
+}
 
 /* ==========================================================================
 Browser Upgrade Prompt
@@ -67,7 +74,6 @@ Generic styles
 /* other generic styles */
 
 .jh-card {
-  margin-top: 20px;
   border: none;
 }
 
@@ -129,7 +135,7 @@ Custom alerts for notification
       font-size: 10px;
     }
   }
-  .jhi-toast {
+  .toast {
     position: fixed;
     width: 100%;
     &.left {
