--- a/src/main/resources/templates/mail/activationEmail.html
+++ b/src/main/resources/templates/mail/activationEmail.html
@@ -7,8 +7,7 @@
   <body>
     <p th:text="#{email.activation.greeting(${user.login})}">Dear</p>
     <p th:text="#{email.activation.text1}">Your JHipster account has been created, please click on the URL below to activate it:</p>
-    <a  th:href="@{${baseUrl} + 'account/reset/finish(key=${user.resetKey})}" th:text="#{email.activation.link}">Activation link</a>
-
+    <a th:href="${${baseUrl}account/activate?key=${user.activationKey}}" th:text="${url}">Activation link</a>
     <p>
       <span th:text="#{email.activation.text2}">Regards, </span>
       <br />
