--- a/src/main/webapp/app/statistics/charts/line-chart.component.html
+++ b/src/main/webapp/app/statistics/charts/line-chart.component.html
@@ -1,4 +1,4 @@
-<div style="display: block">
+<div style="display: block; width: 400px;">
     <canvas mdbChart
         [chartType]="chartType"
         [datasets]="chartDatasets"
