--- a/src/main/webapp/app/show-task/show-task.component.html
+++ b/src/main/webapp/app/show-task/show-task.component.html
@@ -65,7 +65,7 @@
             [disabled] ="!isEditClicked()"
             name="assignedTo"
           >
-          <option *ngFor="let user of users" [ngValue] = "user" [selected]="user.id == task.assignedTo?.id" >
+          <option *ngFor="let user of users" [ngValue] = "user" [selected]="user.id===task.assignedTo?.id ?user: ''" >
             {{ user.email }}
           </option>
         </select>
