--- a/src/main/webapp/app/board/board.component.scss
+++ b/src/main/webapp/app/board/board.component.scss
@@ -98,9 +98,16 @@
     overflow-y: auto;
     
 }
-
+.verticalLine {
+    border-top: thin solid cadetblue;
+    font-size: 0.7em;
+  }
 .task {
     display: flex;
+    flex-direction: column;
+    .task-child{
+        padding: 10px;
+    }
     padding: 15px 12px;
     background: white;
     border-bottom: solid 1px #ddd;
